force-app/main/default/objects/Lista_de_tarefa__c/Lista_de_tarefa__c.object-meta.xml
<CustomObject>
    <description>Lista de tarefas para acompanhamento diario.</description>
    <label>Lista_de_tarefa</label>
    <nameField>
        <label>Nome de Lista_de_tarefa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas_de_tarefas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>