force-app/main/default/objects/Lista_de_tarefa__c/fields/Data_de_Criacao_Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Criacao_Tarefa__c</fullName>
    <description>Informe a data de Criação da tarefa.</description>
    <inlineHelpText>Informe a data de Criação da tarefa.</inlineHelpText>
    <label>Data_de_Criacao_Tarefa</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>