force-app/main/default/objects/Lista_de_tarefa__c/fields/Descricao_projeto__c.field-meta.xml
<CustomField>
    <fullName>Descricao_projeto__c</fullName>
    <description>Descreva seu Projeto.</description>
    <inlineHelpText>Descreva seu Projeto.</inlineHelpText>
    <label>Descricao_projeto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>