force-app/main/default/objects/Lista_de_tarefa__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <description>Selecione a etapa do projeto.</description>
    <inlineHelpText>Selecione a etapa do projeto.</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analise de requisitos</fullName>
            </value>
            <value>
                <fullName>Prototipagem</fullName>
            </value>
            <value>
                <fullName>Validação</fullName>
            </value>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Testes</fullName>
            </value>
            <value>
                <fullName>Implantação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>