force-app/main/default/objects/Lista_de_tarefa__c/fields/Filtro__c.field-meta.xml
<CustomField>
    <fullName>Filtro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>filtra por status ou por etapa.</description>
    <inlineHelpText>filtra por status ou por etapa.</inlineHelpText>
    <label>Lista_de_tarefa</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <valueField>$Source.Status__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Etapa__c</field>
            <operation>equals</operation>
            <valueField>$Source.Etapa__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lista_de_tarefa__c</referenceTo>
    <relationshipLabel>Listas_de_tarefas</relationshipLabel>
    <relationshipName>Listas_de_tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>