force-app/main/default/objects/Lista_de_tarefa__c/fields/Filtros__c.field-meta.xml
<CustomField>
    <fullName>Filtros__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filtros</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Etapa__c</field>
            <operation>equals</operation>
            <valueField>$Source.Etapa__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <valueField>$Source.Status__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lista_de_tarefa__c</referenceTo>
    <relationshipLabel>Listas_de_tarefas (Filtros)</relationshipLabel>
    <relationshipName>Filtros</relationshipName>
    <type>Lookup</type>
</CustomField>