force-app/main/default/objects/Lista_de_tarefa__c/fields/Mais_Informacoes__c.field-meta.xml
<CustomField>
    <fullName>Mais_Informacoes__c</fullName>
    <description>Adicione mais informações sobre o projeto, links e imagens.</description>
    <inlineHelpText>Adicione mais informações sobre o projeto, links e imagens.</inlineHelpText>
    <label>Mais_Informacoes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>