force-app/main/default/objects/Lista_de_tarefa__c/fields/Muito_Importante__c.field-meta.xml
<CustomField>
    <fullName>Muito_Importante__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecione caso a Prioridade seja muito Importante.</description>
    <inlineHelpText>Selecione caso a Prioridade seja muito Importante.</inlineHelpText>
    <label>Muito_Importante</label>
    <type>Checkbox</type>
</CustomField>