force-app/main/default/objects/Lista_de_tarefa__c/fields/Prazo_de_entrega_Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_entrega_Tarefa__c</fullName>
    <description>Adicione o Prazo de entrega da tarefa.</description>
    <inlineHelpText>Adicione o Prazo de entrega da tarefa.</inlineHelpText>
    <label>Prazo_de_entrega_Tarefa</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>