force-app/main/default/objects/Lista_de_tarefa__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iniciado</fullName>
            </value>
            <value>
                <fullName>em andamento</fullName>
            </value>
            <value>
                <fullName>concluído</fullName>
            </value>
            <value>
                <fullName>pendente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>