force-app/main/default/objects/Lista_de_tarefa__c/fields/Tarefas__c.field-meta.xml
<CustomField>
    <fullName>Tarefas__c</fullName>
    <description>selecione suas tarefas</description>
    <inlineHelpText>selecione suas tarefas</inlineHelpText>
    <label>Tarefas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarefa 01</fullName>
            </value>
            <value>
                <fullName>tarefa 02</fullName>
            </value>
            <value>
                <fullName>tarefa 03</fullName>
            </value>
            <value>
                <fullName>tarefa 04</fullName>
            </value>
            <value>
                <fullName>tarefa 05</fullName>
            </value>
            <value>
                <fullName>tarefa 06</fullName>
            </value>
            <value>
                <fullName>tarefa 07</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>